# hacktoberfest-ctf-2020

./: .gitignore  CONTRIBUTING.md  README.md
cookiemonster/: main.py
cookiemonster/templates/: index.html
copyme/: main  main.c  main.id0  main.id1  main.id2  main.nam
ctf/: Cargo.toml  README.md
ctf/challenges/: test.toml
ctf/src/: console.rs  main.rs  parser.rs  sock.rs
ctf/src/commands/: auth.rs  challenge.rs  help.rs  mod.rs  test.rs
guessme/: guessme.py
opensesame/: README.md  main.py
opensesame/templates/: index.html  success.html
reverseme/: Cargo.toml
reverseme/src/: main.rs
