[package]
name = "rusctf"
version = "0.1.0"
authors = ["ThrDev <ThrDev@users.noreply.github.com>"]
edition = "2018"

[features]
cli = []
# tcp = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "5.1.2"
tokio = { version = "0.2.22", features = ["macros", "tcp", "dns", "io-util"] }
indoc = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
indexmap = "1.5.1"
futures = "0.3.5"
downcast = "0.10.0"
pancurses = "0.16.1"
signal-hook = "0.1.16"

[profile.release]
lto = true
codegen-units = 1
